--- a/login/login.css
+++ b/login/login.css
@@ -10,41 +10,125 @@ section{
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: green;
+    background-image: url(./img-login/6445.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
 }
 .form-box{
     position: relative;
     width: 400px;
     height: 450px;
-    background: red;
+    background: transparent;
+    border: 2px solid  rgba(18, 17, 17, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
     display: flex;
     justify-content: center ;
     align-items: center;
 }
 h2{
     font-size: 2em;
-    color: white;
+    color: rgb(9, 9, 9);
     text-align: center;
 }
 .inputbox{
-    position: absolute;
+    position: relative;
     margin: 30px 0 ;
     width: 310px;
-    border-bottom: 2px solid white;
-    font-size: 1em;
-    pointer-events: none;
+    border-bottom: 3px solid rgb(33, 31, 31);   
 }
 
-
-.inputbox input{
+.inputbox label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    color: rgb(17, 16, 16);
+    font-size: 1em;
+    pointer-events: none;
+    transition: .5s;
+}
+input:focus ~ label,
+input:valid ~ label{
+top: -5px;
+}
+.inputbox input {
     width: 100%;
     height: 50px;
+    background: transparent;
     border: none;
     outline: none;
     font-size: 1em;
-    padding: 35px 0 5px 0;
-    color: white;
+    padding: 0 35px 0 5px ;
+    color: rgb(20, 19, 19);
+
+}
+
+.inputbox ion-icon{
+    position: absolute;
+    right: 8px;
+    color: rgb(29, 27, 27);
+    font-size: 1.2em;
+    top: 20px;
+
+}
+
+.forget{
+    margin: -15px 0 15px;
+    font-size: .9em;
+    color: rgb(34, 32, 32);
+    display: flex;
+    justify-content: center;
+}
+
+
+.forget label input{
+    margin-right: 3px;
+
+}
+
+.forget label a{
+    color: rgb(21, 20, 20);
+    text-decoration: none;
+
+
+}
+
+.forget label a:hover{
+    text-decoration: underline;
 
 }
 
 
+button{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    background: rgb(247, 243, 243);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
+}
+
+.register{
+    font-size: .9em;
+    color: rgb(3, 3, 3);
+    text-align: center;
+    margin: 25px 0 10px;
+
+}
+
+.register p a{
+    text-decoration: none;
+    color: rgb(18, 17, 17);
+    font-weight: 600;
+     
+}
+
+.register p a:hover{
+    text-decoration: underline;
+}
